--- a/OpenIV/Resources/Languages/zh_CN/Tools/AsiManager.xml
+++ b/OpenIV/Resources/Languages/zh_CN/Tools/AsiManager.xml
@@ -5,7 +5,7 @@
 		<string name="TITLE">$RageGAME_SHORT$ - ASI 管理器</string>
 
 		<string name="RPF_NOTE">你必须安装 ASI Loader 和 $ModsFolderAsi$ 插件用于 $RageGAME_SHORT$, 否则修改文件会导致游戏会出错。</string>
-		<string name="ONLINE_NOTE">不要在 $RageGAME_MP$ 线上模式中使用 MOD，否则您会被 R 星封禁游戏账户。</string>
+		<string name="ONLINE_NOTE">不要尝试在 $RageGAME_MP$ 线上模式中使用MOD，否则会禁止进入线上模式，重则被Rockstar封禁游戏账户。</string>
 
 		<string name="INSTALL">安装</string>
 		<string name="UPDATE">升级</string>
@@ -23,7 +23,7 @@
 		<string name="OPENIV_ASI_DESCRIPTION">这个插件可以使游戏加载修改过的游戏文件。同时使得游戏支持 mods 目录。</string>
 
 		<string name="OPEN_CAMERA_ASI">openCamera</string>
-		<string name="OPEN_CAMERA_ASI_DESCRIPTION">解除R星编辑器中的自由摄像机的视距边界限制。</string>
+		<string name="OPEN_CAMERA_ASI_DESCRIPTION">解除Rockstar编辑器中的摄像机的视距边界限制。</string>
 
 		<string name="INSTALLATION_FAILED">安装失败</string>
 		<string name="INSTALLATION_FAILED_TEXT">安装失败, 重新启动 $AppName$ 后重试。</string>
